--- a/index.html
+++ b/index.html
@@ -1,28 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>MSU Hacky-Hour Coding Group Resources</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/links">Links</a></li>
-            <li><a href="/tutorials">Tutorials</a></li>
-            <li><a href="/code">Code</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>MSU Hacky-Hour Coding Group Resources</h1>
-				<p>This repo holds useful resources for improving your coding techniques. It is divided into three sections.</p>
-            <h2><a href="/tutorials">Tutorials</a></h1>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="https://github.com/hacky-hour">github.com/hacky-hour</a></li>
-            <li><a href="https://github.com/hacky-hour/help/issues">Post an issue on our github help repo to get coding help!</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
