--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: Hank Quinlan, Horrible Cop
 
 		<div class="blurb">
 			<h1>MSU Hacky-Hour Resources</h1>
-			<p></p>
+			<p>Stuff goes here</p>
 		</div> 
